--- a/sprint-three/styles/main.css
+++ b/sprint-three/styles/main.css
@@ -750,16 +750,22 @@ a {
 }
 .comment-body__interaction {
   display: flex;
+  align-items: baseline;
   width: 100%;
+}
+.comment-body__interaction p {
+  color: rgba(228, 194, 85, 0.829);
+  font-weight: 600;
+  text-shadow: 0px 0px 0px #181817;
 }
 .comment-body__interaction--likes {
   color: white;
   background-color: #323232;
   border: none;
   border-radius: 0.25rem;
-  color: white;
+  width: 3.5rem;
+  padding: 0.5rem;
   margin-right: 10px;
-  width: 3rem;
 }
 .comment-body__interaction--likes:hover {
   text-shadow: 0px 1px 3px rgba(253, 201, 31, 0.5);
@@ -772,9 +778,9 @@ a {
   background-color: #323232;
   border: none;
   border-radius: 0.25rem;
-  color: white;
+  width: 3.5rem;
+  padding: 0.5rem;
   margin-left: auto;
-  width: 3rem;
 }
 .comment-body__interaction--delete:hover {
   background-color: #c82222;
