--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -124,10 +124,10 @@ a {
       padding: 0 6.25rem;
       margin: 0 0 3rem 0;
     }
-    &--img {
-      width: 100%;
-      height: 100%;
-    }
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
   }
   &__quote {
     @include h3-subheader;
